# lrc-plotter

./: README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
lrc_plotter/: PlotConfig.py  lrc_plotter.py
